--- a/frontend/src/app/components/cakes/cakes.component.html
+++ b/frontend/src/app/components/cakes/cakes.component.html
@@ -1,54 +1,89 @@
 <h3>Rate my cakes</h3>
-<p>Submit a cake to be rated</p>
-<form #cakeForm="ngForm" (ngSubmit)="!isEdit ? onNewCake(cakeForm) : onUpdatedCake(cakeForm)">
-  <input name="_id" type="hidden" [(ngModel)]="currentCake._id" #cakeId="ngModel"
-         *ngIf="isEdit"/>
-  <div class="form-group">
-    <label>Baker Name:</label>
-    <input
-      type="text"
-      class="form-control"
-      [(ngModel)]="currentCake.baker"
-      [ngClass]="{'is-invalid':cakeBaker.errors && cakeBaker.touched}"
-      name="baker"
-      #cakeBaker="ngModel"
-      required
-      minlength="2"
-    >
-    <div [hidden]="!cakeBaker.errors?.required" class="invalid-feedback">
-      Last name required
-    </div>
-    <div [hidden]="!cakeBaker.errors?.minlength" class="invalid-feedback">
-      Must be at least 2 characters
-    </div>
+<div class="row">
+  <div class="col-sm-4">
+    <p>Submit a cake to be rated</p>
+    <form #cakeForm="ngForm" (ngSubmit)="!isEdit ? onNewCake(cakeForm) : onUpdatedCake(cakeForm)">
+      <input name="_id" type="hidden" [(ngModel)]="currentCake._id" #cakeId="ngModel"
+             *ngIf="isEdit"/>
+      <div class="form-group">
+        <label>Baker Name:</label>
+        <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="currentCake.baker"
+          [ngClass]="{'is-invalid':cakeBaker.errors && cakeBaker.touched}"
+          name="baker"
+          #cakeBaker="ngModel"
+          required
+          minlength="2"
+        >
+        <div [hidden]="!cakeBaker.errors?.required" class="invalid-feedback">
+          Last name required
+        </div>
+        <div [hidden]="!cakeBaker.errors?.minlength" class="invalid-feedback">
+          Must be at least 2 characters
+        </div>
+      </div>
+      <div class="form-group">
+        <label>Image Url:</label>
+        <input
+          type="text"
+          class="form-control"
+          name="url"
+          [(ngModel)]="currentCake.url"
+          [ngClass]="{'is-invalid':cakeUrl.errors && cakeUrl.touched}"
+          #cakeUrl="ngModel"
+          required
+          minlength="2"
+        >
+        <div [hidden]="!cakeUrl.errors?.required" class="invalid-feedback">
+          First name required
+        </div>
+        <div [hidden]="!cakeUrl.errors?.minlength" class="invalid-feedback">
+          Must be at least 2 characters
+        </div>
+      </div>
+
+      <button [disabled]="!cakeForm.form.valid" class="btn btn-block mb-3 btn-primary col-sm-8">SUBMIT</button>
+      <!--  <button [disabled]="!cakeForm.form.valid" class="btn btn-block mb-3" [innerText]="!isEdit ? 'Add New Cake' : 'Update Cake'"></button>-->
+    </form>
   </div>
-  <div class="form-group">
-    <label>Image Url:</label>
-    <input
-      type="text"
-      class="form-control"
-      name="url"
-      [(ngModel)]="currentCake.url"
-      [ngClass]="{'is-invalid':cakeUrl.errors && cakeUrl.touched}"
-      #cakeUrl="ngModel"
-      required
-      minlength="2"
-    >
-    <div [hidden]="!cakeUrl.errors?.required" class="invalid-feedback">
-      First name required
-    </div>
-    <div [hidden]="!cakeUrl.errors?.minlength" class="invalid-feedback">
-      Must be at least 2 characters
-    </div>
+  <div class="col-sm-8">
+  <ul class="list-unstyled" *ngIf="cakes?.length > 0">
+    <li class="card card-body mb-2" *ngFor="let cake of cakes">
+      <div class="row">
+        <div class="col-sm-4">
+          <img [src]="cake.url" [alt]="cake.baker" class="img-fluid">
+        </div>
+        <form #ratingForm="ngForm" (ngSubmit)="onNewRate(cake._id, stars, comment)" class="col-sm-8">
+          <!--      <input name="_id" type="hidden" [(ngModel)]="currentCake._id" #rateId="ngModel"-->
+          <!--             *ngIf="isEdit"/>-->
+          <div class="form-group">
+            <select #stars class="form-control">
+              <option value="1">1 star</option>
+              <option value="2">2 stars</option>
+              <option value="3">3 stars</option>
+              <option value="4">4 stars</option>
+              <option value="5">5 stars</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <input
+              #comment
+              type="text"
+              class="form-control"
+              name="baker"
+              required
+              minlength="2"
+            >
+          </div>
+
+          <button [disabled]="!ratingForm.form.valid" class="btn btn-block mb-3 btn-primary col-sm-8 col-md-4 col-lg-3">Rate!</button>
+          <!--  <button [disabled]="!rateForm.form.valid" class="btn btn-block mb-3" [innerText]="!isEdit ? 'Add New Cake' : 'Update Cake'"></button>-->
+        </form>
+      </div>
+    </li>
+  </ul>
   </div>
-
-  <button [disabled]="!cakeForm.form.valid" class="btn btn-block mb-3 btn-primary col-sm-2">SUBMIT</button>
-<!--  <button [disabled]="!cakeForm.form.valid" class="btn btn-block mb-3" [innerText]="!isEdit ? 'Add New Cake' : 'Update Cake'"></button>-->
-</form>
-
-<ul class="list-unstyled" *ngIf="cakes?.length > 0">
-  <li class="card card-body mb-2" *ngFor="let cake of cakes" >
-    <img [src]="cake.url" width="100px" height="100px" [alt]="cake.baker">
-  </li>
-</ul>
-
+</div>
