--- a/frontend/src/app/components/cakes/cakes.component.html
+++ b/frontend/src/app/components/cakes/cakes.component.html
@@ -97,7 +97,8 @@
     <img [src]="currentCake.url" [alt]="currentCake.baker" class="img-fluid">
   </div>
   <div class="col-sm-6 h5 offset-1 align-top">
-    <p>Average Rating: </p>
+    <p *ngIf="!currentCake.avgRating" class="text-danger">Not rated yet. Be the first rater!</p>
+    <p *ngIf="currentCake.avgRating" class="text-primary">Average Rating: {{currentCake.avgRating}} </p>
     <div *ngFor="let rating of currentCake.ratings">
       <p>{{rating.comment}}</p>
       <p>{{rating.stars}} stars</p>
