separate cakeInfo into a new component

--- a/frontend/src/app/components/cakes/cakes.component.html
+++ b/frontend/src/app/components/cakes/cakes.component.html
@@ -98,18 +98,19 @@
   </div>
 </div>
 <!-- CurrentCake Details -->
-<div class="row mt-5 overflow-auto" *ngIf="currentCake" style="height: 24em">
-  <div class="col-sm-4 align-top">
-    <h3 class="mb-3">Baked by {{currentCake.baker}}</h3>
-    <img [src]="currentCake.url" [alt]="currentCake.baker" class="img-fluid">
-  </div>
-  <div class="col-sm-6 h5 offset-1 align-top">
-    <p *ngIf="!currentCake.avgRating || currentCake.ratings.length === 0" class="text-danger">Not rated yet. Be the first rater!</p>
-    <p *ngIf="currentCake.avgRating" class="text-primary">Average Rating: {{currentCake.avgRating}} </p>
-    <div class='card card-body'*ngFor="let rating of currentCake.ratings">
-      <p>{{rating.comment}}</p>
-      <p>{{rating.stars}} stars</p>
-      <button class="btn btn-warning col-sm-3" (click)="onDeleteRate(currentCake._id, rating._id)">Delete</button>
-    </div>
-  </div>
-</div>
+<app-cake-info [cake]="currentCake" ></app-cake-info>
+<!--<div class="row mt-5 overflow-auto" *ngIf="currentCake" style="height: 24em">-->
+<!--  <div class="col-sm-4 align-top">-->
+<!--    <h3 class="mb-3">Baked by {{currentCake.baker}}</h3>-->
+<!--    <img [src]="currentCake.url" [alt]="currentCake.baker" class="img-fluid">-->
+<!--  </div>-->
+<!--  <div class="col-sm-6 h5 offset-1 align-top">-->
+<!--    <p *ngIf="!currentCake.avgRating || currentCake.ratings.length === 0" class="text-danger">Not rated yet. Be the first rater!</p>-->
+<!--    <p *ngIf="currentCake.avgRating" class="text-primary">Average Rating: {{currentCake.avgRating}} </p>-->
+<!--    <div class='card card-body'*ngFor="let rating of currentCake.ratings">-->
+<!--      <p>{{rating.comment}}</p>-->
+<!--      <p>{{rating.stars}} stars</p>-->
+<!--      <button class="btn btn-warning col-sm-3" (click)="onDeleteRate(currentCake._id, rating._id)">Delete</button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
